# Social-Impact-Dev---Copilot-Agent-Prototype

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/data-sync/: function_app.py  local.settings.json.example  models.py  openapi.yaml  pyproject.toml
apps/email-update/: function_app.py  local.settings.json.example  openapi.yaml  pyproject.toml
apps/fec-data-sync/: function_app.py  local.settings.json.example  pyproject.toml
docs/: configuration.md  demo.md  deployment.md  infrastructure.md  prerequisites.md
infra/: README.md  communication-services.bicep  data-sync-app.bicep  email-function-app.bicep  email-update-app.bicep  eventgrid-subscription.bicep  function-app.bicep  function-app.bicepparam  function-app.parameters.json  main.bicep  main.bicepparam  main.parameters.json  openai.bicep  role-assignment.bicep  storage.bicep  storage.bicepparam  storage.parameters.json
